ec2.tf
provider "aws" {
  region = "ap-south-1"
}
resource "aws_instance" "web" {
  ami = "ami-id"
  instance_type = "t2.micro"

  tags = {
    Name = "HelloWorld"
 }
}
